--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,158 @@
-h1{
-    font-family: 'Montserrat', sans-serif;
-}
+body{
 
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+
+}
+h1, h2, h3, h4, h5, h6{
+    
+    font-family: 'Montserrat-bold', sans-serif;
+    
+}
+ul{
+
+    font-size: 1.4rem;
+    margin-right: 20%;
+
+}
+li{
+
+    margin-right: 10%;
+    font-size: 1.2rem;
+}
+/* Headings */
+
+.big-heading{
+
+    font-family: 'Montserrat-black', sans-serif;
+    font-size: 3.2rem;
+    line-height: 1.5;
+    font-weight: 800;
+    margin: 10% 2% 3% 0;
+    color: white;
+    text-align: left;
+}
+.section-heading{
+
+    font-size: 2.8rem;
+    line-height: 1.5;
+    font-weight: bold;
+}
 #title{
     background-color: #ff4c68;
+    text-align: left;
 }
+
+.container-fluid{
+    padding: 7% 15%;
+}
+
+#nav-brand{
+
+    font-size: 3rem;
+    font-weight: 500;
+    font-family: "Ubuntu",arial;
+}
+
+.btn-heading{
+    margin-right: 3%;
+}
+
+#title-img{
+
+    transform: rotate(25deg);
+    position: relative;
+    top:15%;
+    left:7%;
+    max-width: 50%;
+}
+
+#features{
+
+    text-align: center;
+    position: relative;
+    background-color: white;
+    
+}
+#features h3{
+
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+#features p{
+
+    color: #8f8f8f;
+}
+.features-icons{
+    
+    font-size: 5rem;
+    color: #ef8172;
+    padding-bottom: 3%;
+}
+.features-icons:hover{
+    
+    color: #ee412a;
+}
+
+#testimonials{
+
+    background-color: #ff4c68;
+    color: white;
+}
+
+.testimonials-img{
+
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+.carousel-item{
+
+    padding: 0 15%;
+}
+
+#press{
+
+    background-color: #ff4c68;
+    padding-bottom: 3%;
+}
+.press-img{
+
+    width:10%;
+    margin: 20px 60px 15px;
+}
+@media (max-width:995px){
+
+    #title-img {
+    
+        position: static;
+        transform: rotate(0);
+    }
+    #title{
+
+        text-align: center;
+    }
+    
+}
+
+#cta{
+
+    background-color: #ff4c68;
+    color: white;
+}
+#cta-h3{
+    margin: 0 auto 5%;
+    font-size: 2.8rem;
+    line-height: 1.5;
+    font-weight: 900;
+    width:60%;
+}
+.footer-icon{
+
+    margin: 0 10px 0;
+}
+#copyright{
+    color: darkgrey;
+}
+
