--- a/css/styles.css
+++ b/css/styles.css
@@ -38,26 +38,25 @@ li{
     line-height: 1.5;
     font-weight: bold;
 }
-#title{
-    background-color: #ff4c68;
-    text-align: left;
-}
-
 .container-fluid{
     padding: 7% 15%;
 }
 
+/* Title Section */
+
+#title{
+    background-color: #ff4c68;
+    text-align: left;
+}
 #nav-brand{
 
     font-size: 3rem;
     font-weight: 500;
     font-family: "Ubuntu",arial;
 }
-
 .btn-heading{
     margin-right: 3%;
 }
-
 #title-img{
 
     transform: rotate(25deg);
@@ -66,6 +65,21 @@ li{
     left:7%;
     max-width: 50%;
 }
+@media (max-width:995px){
+
+    #title-img {
+    
+        position: static;
+        transform: rotate(0);
+    }
+    #title{
+
+        text-align: center;
+    }
+    
+}
+
+/* Features Section */
 
 #features{
 
@@ -95,12 +109,13 @@ li{
     color: #ee412a;
 }
 
+/* Testimonials Section */
+
 #testimonials{
 
     background-color: #ff4c68;
     color: white;
 }
-
 .testimonials-img{
 
     width: 10%;
@@ -111,7 +126,6 @@ li{
 
     padding: 0 15%;
 }
-
 #press{
 
     background-color: #ff4c68;
@@ -122,19 +136,8 @@ li{
     width:10%;
     margin: 20px 60px 15px;
 }
-@media (max-width:995px){
 
-    #title-img {
-    
-        position: static;
-        transform: rotate(0);
-    }
-    #title{
-
-        text-align: center;
-    }
-    
-}
+/* Call to Action Section */
 
 #cta{
 
@@ -148,6 +151,9 @@ li{
     font-weight: 900;
     width:60%;
 }
+
+/* Footer Section*/
+
 .footer-icon{
 
     margin: 0 10px 0;
